2004-06-04  Eli Zaretskii  <eliz@gnu.org>

	* xfaces.c (x_supports_face_attributes_p): Make this function
	conditional on HAVE_WINDOW_SYSTEM.
	(Fdisplay_supports_face_attributes_p) [HAVE_WINDOW_SYSTEM]: Don't
	call x_supports_face_attributes_p if it was not compiled in.

2004-06-04  Miles Bader  <miles@gnu.org>

	* xfaces.c (tty_supports_face_attributes_p): New function, mostly
	from Ftty_supports_face_attributes_p.
	(x_supports_face_attributes_p): New function.
	(Ftty_supports_face_attributes_p): Function deleted.
	(Fdisplay_supports_face_attributes_p): New function.
	(syms_of_xfaces): Initialize Sdisplay_supports_face_attributes_p.
	(face_attr_equal_p): New function
	(lface_equal_p): Use it.

2004-06-03  Juanma Barranquero  <lektu@terra.es>

	* w32fns.c (Fx_display_grayscale_p, Fw32_send_sys_command)
	(Vw32_color_map): Fix typo in docstring.
	(Fx_create_frame, Fw32_find_bdf_fonts, Fx_show_tip)
	(Fw32_unregister_hot_key, Fw32_reconstruct_hot_key):
	Make argument names match their use in docstring.

2004-06-02  Juanma Barranquero  <lektu@terra.es>

	Work around bugs/problems with MinGW builds of graphics libraries
	called from MSVC builds of Emacs.

	* image.c (lookup_image): Make pointer to img static.
	(png_read_from_memory): Disable "global" optimization.

2004-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mem-limits.h (EXCEEDS_LISP_PTR) [USE_LSB_TAG]: Never true.

2004-05-29  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macfns.c: Don't include ccl.h.
	[MAC_OSX]: Don't include QuickTime/QuickTime.h.
	[!MAC_OSX]: Don't include alloca.h, Windows.h, Gestalt.h, or
	TextUtils.h.
	(Fx_create_frame): Sync with xfns.c.  Initialize cursor
	descriptors.
	(Fx_display_mm_height, Fx_display_mm_width): Calculate length from
	display height/width.
	(compute_tip_xy, Vx_max_tooltip_size): Declare.
	(unwind_create_tip_frame, compute_tip_xy): New functions.
	(x_create_tip_frame, Fx_show_tip, Fx_hide_tip): Sync with xfns.c.