@@ -1,3 +1,8 @@
+2004-06-05  Miles Bader  <miles@gnu.org>
+
+	* xfaces.c (tty_supports_face_attributes_p): Make sure the specified
+	attributes have different values than the default face.
+
 2004-06-04  Eli Zaretskii  <eliz@gnu.org>
 
 	* xfaces.c (x_supports_face_attributes_p): Make this function
